assets/css/main.scss
---
---

$serif      : Baskerville, Georgia, "Liberation Serif", Times, "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
$sans-serif : -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "Microsoft YaHei", Arial, sans-serif;
$monospace  : Monaco, Consolas, "Lucida Console", monospace;


@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

blockquote {
	font-style: normal;
	font-family: $serif;
}

.card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	margin: 0.2rem 0.2rem 0.4rem;
}

html {
	box-sizing: border-box;
	font-size: 14px;
	@include breakpoint($medium) { font-size: 16px; }
	@include breakpoint($large) { font-size: 18px; }
	@include breakpoint($x-large) { font-size: 20px; }
}

.page__content li p {
  margin-bottom: 0;
}

body.landing {
	//background-color: #EEE;
	//background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('/image/mm/splash.jpg');
	div.masthead {
		background: none;
		border-bottom: none;
	}

	div.page__hero--overlay {
		text-align: center;
		padding: 6em 0 4em;
		@include breakpoint($medium) { padding: 10.5em 0 5.5em; }
		@include breakpoint($large) {
			padding: 12.5em 0 7.5em;
			background-attachment: fixed;
		}
		@include breakpoint($x-large) {
			padding: 15.5em 0 10.5em;
			background-attachment: fixed;
		}
	}

	p.page__lead {
		margin-left: auto;
		margin-right: auto;
	}

	#page-title {
		text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
	}
}

